# spineax

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  pyproject.toml.cu12  pyproject.toml.cu13
examples/cudss/: batched_rhs.py
src/spineax/cudss/: batch_solve.cpp  pseudo_batch_solve.cpp  pseudo_batch_solve.cu  single_solve.cpp  single_solve_re.cpp  solver.py  solver_re.py
tests/: Dockerfile.cu12  Dockerfile.cu13  test_docker_cuda.sh
tests/cudss/: Dockerfile.cu12.no-pbatch  Dockerfile.cu13.no-pbatch  test_cudss.py  test_docker_cuda.sh  test_pbatch_fallback.py
tmp/lhs_debug/: load_solves.py
